--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,111 @@
+body {
+    width:100%;
+    margin:0;
+}
+
 header {
-    background-color:red;
-   width:100%;
-   height:100px;
+   background-color:rgb(26, 107, 212);
+   background-image:url(../img/pattern.png);
+   background-size: 40%;
+   height:125px;
+   
 }
 
 #logo {
-   width:100px;
-   height:50px;
+   width:210px;
+   height:70px;
+   margin-top:50px;
+   margin-left:10px;
+}
+
+main, footer {
+    margin-left:10px;
 }
 
 h1 {
-    font-size:40px;;
+    font-size:45px;
+    margin:0;
+}
+
+.article-author {
+    margin:0;
+    color:rgb(131, 130, 130);
+}
+
+#blue-text {
+    color:aqua;
+}
+
+#img-container {
+    height:450px;
+    margin-bottom:3px;
+}
+
+#photo1 {
+    width:47%;
+    height:100%;
+}
+
+#photo2 {
+    width:47%;
+    height:100%;
+}
+
+#photo-description {
+    font-size:12px;
+    font-weight: 500;
+}
+
+.marked-text {
+    background-color: yellow;
+}
+
+ul {
+    padding-left:15px;
+}
+
+table {
+    table-layout: fixed;
+    width:100%;
+    border-collapse: collapse;
+    line-height: 17px;
+}
+
+#thead-style {
+    color:white;
+    background-color: rgb(0, 110, 184);
+}
+
+.table-color-row {
+    background-color:rgb(115, 237, 241);
+}
+
+footer span{
+    color:rgb(131, 130, 130);
+    font-size: 18px;
+    font-weight: 800;
+}
+
+.monitor {
+    background-image: url(../img/monitor.jpg);
+}
+
+.graph {
+    background-image: url(../img/graph.jpg);
+}
+
+.suggestion {
+    width:24%;
+    height:180px;
+    background-size: 100%;
+    margin-bottom:10px;
+}
+
+.suggestion-text {
+    color:white;
+    text-align: left;
+    font-size:25px;
+    font-weight: 800;
+    margin-top:10px;
+    margin-left:10px;
 }
